Compiler/tests/typing/bad/testfile-bool-2.rs

fn foo() {return; }
fn main() { !(foo()); return; }
